# RAGify

ragify-api/: main.py  pyproject.toml
ragify-api/scripts/: create_users.py  delete_all_tables.py  delete_users.py  migration.py  test_db.py
ragify-api/src/: config.py  db.py  main.py
ragify-api/src/auth/: dependencies.py  jwt.py  security.py
ragify-api/src/controllers/: auth_controller.py  document_controller.py
ragify-api/src/llm/: ai_generator.py
ragify-api/src/models/: __init__.py  chat_message.py  chunks.py  documents.py  users.py
ragify-api/src/routers/: analytics_router.py  auth.py  auth_router.py  chat_router.py  document_router.py  health_check_router.py  search_router.py  user_router.py
ragify-api/src/schemas/: chat.py  users.py
ragify-api/src/services/: embedding_service.py
ragify-api/src/utils/: __init__.py  api_response.py  cloudinary_client.py  cloudinary_utils.py  error_handler.py  file_utils.py  r2_utils.py
ragify-api/src/vector_db/: dependencies.py  document_store.py  qdrant_connection.py  qdrant_manager.py
ragify-api/utils/: error_handler.py
ragify-web/: index.html  package-lock.json  package.json  tsconfig.app.json
ragify-web/src/: App.tsx  main.tsx
ragify-web/src/api/: api.ts  auth.ts
ragify-web/src/components/: AuthForm.tsx  ChatSidebarLeft.tsx  DashboardCard.tsx  DocumentChatbot.tsx  DocumentList.tsx  DocumentUploader.tsx  DocumentsPerUserTable.tsx  ProtectedRoute.tsx  Rightbar.tsx
ragify-web/src/pages/: Auth.tsx  Home.tsx  Register.tsx
ragify-web/src/pages/admin/: analytics.tsx
